--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         </activity>
 
         <activity
-            android:name=".activity.ThreadDetailsActivity"
-            android:parentActivityName=".activity.MainActivity"></activity>
+            android:name=".activity.ThreadDetailsActivity"></activity>
     </application>
 
 </manifest>
